<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.daniyal.todo_mvvm.viewmodels.LoginViewModel" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.LoginActivity">


        <ImageView
            android:id="@+id/IV_Logo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@mipmap/app_logo" />


        <LinearLayout
            android:id="@+id/LL_EmailPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/login_border"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@null"
                android:fontFamily="@font/roboto_light"
                android:hint="Username"
                android:text="@={viewmodel.username}"
                android:id="@+id/ET_User"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/login_border" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@null"
                android:fontFamily="@font/roboto_light"
                android:hint="Password"
                android:text="@={viewmodel.password}"
                android:id="@+id/ET_Pass"/>

        </LinearLayout>


        <Button
            android:id="@+id/BTN_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL_EmailPass"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:onClick="@{viewmodel::validateFields}"
            android:padding="@dimen/_15sdp"
            android:text="Login" />

        <LinearLayout
            android:id="@+id/LL_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BTN_Login"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6">


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2.5"
                android:background="@color/login_border" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="OR" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2.5"
                android:background="@color/login_border" />


        </LinearLayout>


        <TextView
            android:id="@+id/TV_SocialLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL_View"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_light"
            android:text="login using social media" />

        <ImageView
            android:id="@+id/IV_Google"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@id/TV_SocialLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@mipmap/google" />

    </RelativeLayout>

</layout>