<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_task"
            android:icon="@drawable/new_task"
            android:title="New Task" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="Logout" />

    </group>

</menu>