...
            app:lottie_speed="0.7"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            android:id="@+id/loading"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RV_TodoItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar" />


    </LinearLayout>
...
