...
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menubar"
                android:id="@+id/IV_Menu"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
...
